--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Node
 node_modules/
+
+# Environment variables
 .env
+
+# Build output
 dist/
+build/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Temp
+.DS_Store
